--- a/betafpv/Makefile
+++ b/betafpv/Makefile
@@ -6,16 +6,34 @@ FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
 
 BIN = build/$(SKETCH).ino.bin
 
+DFU = build/$(SKETCH).ino.dfu
+
+HEX = build/$(SKETCH).ino.hex
+
 SRC = ../src
 
-all: $(SKETCH).ino  
+all: $(BIN)
+
+dfu: $(DFU)
+
+$(DFU): $(HEX)
+	./dfuse-pack.py -i $(HEX) $(DFU)
+
+$(HEX): $(SKETCH).ino
 	arduino-cli compile \
 		--libraries $(HOME)/Documents/Arduino/libraries \
 		--libraries ../.. \
 		--build-path ./build \
 		--fqbn $(FQBN) $(SKETCH).ino
 
-flash: $(BIN)
+$(BIN): $(SKETCH).ino
+	arduino-cli compile \
+		--libraries $(HOME)/Documents/Arduino/libraries \
+		--libraries ../.. \
+		--build-path ./build \
+		--fqbn $(FQBN) $(SKETCH).ino
+
+unbrick: $(BIN)
 	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D build/$(SKETCH).ino.bin
 
 clean:
