--- a/betafpv/Makefile
+++ b/betafpv/Makefile
@@ -33,6 +33,11 @@ $(BIN): $(SKETCH).ino
 		--build-path ./build \
 		--fqbn $(FQBN) $(SKETCH).ino
 
+flash: $(DFU)
+	echo -n 'R' > $(PORT)
+	sleep 1
+	dfu-util -a 0 -D $(DFU) -s :leave
+
 unbrick: $(BIN)
 	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D build/$(SKETCH).ino.bin
 
