--- a/betafpv/Makefile
+++ b/betafpv/Makefile
@@ -39,7 +39,7 @@ flash: $(DFU)
 	dfu-util -a 0 -D $(DFU) -s :leave
 
 unbrick: $(BIN)
-	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D build/$(SKETCH).ino.bin
+	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D $(BIN)
 
 clean:
 	rm -rf build
