--- a/diy/Makefile
+++ b/diy/Makefile
@@ -1,43 +1,32 @@
-SKETCH = diy
-
 PORT = /dev/ttyACM0
 
 FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
 
-BIN = build/$(SKETCH).ino.bin
-
-DFU = build/$(SKETCH).ino.dfu
-
-HEX = build/$(SKETCH).ino.hex
+BIN = build/diy.ino.bin
 
 SRC = ../src
 
-dfu: $(DFU)
-
-$(DFU): $(HEX)
-	../utils/dfuse-pack.py -i $(HEX) $(DFU)
-
-$(HEX): $(SKETCH).ino ../src/*.hpp
+bolt: diy.ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
+	$(SRC)/msp/__messages__.h
+	cp bolt/imu.cpp ./__imu__.cpp
+	cp bolt/motors.cpp ./__motors__.cpp
 	arduino-cli compile \
 		--libraries $(HOME)/Documents/Arduino/libraries \
 		--libraries ../.. \
 		--build-path ./build \
-		--fqbn $(FQBN) $(SKETCH).ino
+		--fqbn $(FQBN) diy.ino
 
-flash: $(DFU)
-	echo -n 'R' > $(PORT)
-	sleep 2
-	dfu-util -a 0 -D $(DFU) -s :leave
+$(SRC)/msp/__messages__.h: ../msppg/messages.json
+	cd ../msppg; make install; cd ../diy
 
-# Building .hex will also build .bin
-unbrick: $(HEX)
-	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D $(BIN)
+standard_config:
+	cp $(SRC)/control/standard.hpp $(SRC)/__control__.hpp
+
+flash: $(BIN)
+	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D build/diy.ino.bin
 
 clean:
-	rm -rf build/
-
-edit:
-	vim $(SKETCH).ino
+	rm -rf build __*__.cpp
 
 listen:
 	miniterm.py $(PORT) 115200 --exit-char 3
