modified:   i2cscanner.ino

--- a/tests/i2cscanner/Makefile
+++ b/tests/i2cscanner/Makefile
@@ -2,7 +2,8 @@ SKETCH = i2cscanner
 
 PORT = /dev/ttyACM0
 
-FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
+# FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
+FQBN = STMicroelectronics:stm32:GenF4:pnum=FEATHER_F405,usb=CDCgen
 
 BIN = build/$(SKETCH).ino.bin
 
@@ -18,6 +19,12 @@ $(HEX):  $(SKETCH).ino
 		--build-path ./build \
 		--fqbn $(FQBN) $(SKETCH).ino
 
+flash: $(DFU)
+	echo -n 'R' > $(PORT)
+	sleep 2
+	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D $(BIN)
+
+# Building .hex will also build .bin
 unbrick: $(HEX)
 	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D $(BIN)
 
