Feather LED working

--- a/feather/Makefile
+++ b/feather/Makefile
@@ -2,7 +2,7 @@ SKETCH = feather
 
 PORT = /dev/ttyACM0
 
-FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
+FQBN = STMicroelectronics:stm32:GenF4:pnum=FEATHER_F405,usb=CDCgen
 
 SRC = ../src
 
