modified:   crazyflie/Makefile

--- a/crazyflie/Makefile
+++ b/crazyflie/Makefile
@@ -1,25 +1,28 @@
+SKETCH = crazyflie
+
 PORT = /dev/ttyACM0
 
 FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
 
-BIN = build/crazyflie.ino.bin
+BIN = build/$(SKETCH).ino.bin
 
 SRC = ../src
+
+MSGS = $(SRC)/msp/__messages__.h
 
 any:
 	echo "Please specify cf2 or bolt"
 
-bolt: crazyflie.ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
-	$(SRC)/msp/__messages__.h
+bolt: $(SKETCH).ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp $(MSGS)
 	cp bolt/imu.cpp ./__imu__.cpp
 	cp bolt/motors.cpp ./__motors__.cpp
 	arduino-cli compile \
 		--libraries $(HOME)/Documents/Arduino/libraries \
 		--libraries ../.. \
 		--build-path ./build \
-		--fqbn $(FQBN) crazyflie.ino
+		--fqbn $(FQBN) $(SKETCH).ino
 
-cf2: crazyflie.ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
+cf2: $(SKETCH).ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
 	$(SRC)/msp/__messages__.h
 	cp cf2/imu.cpp ./__imu__.cpp
 	cp cf2/motors.cpp ./__motors__.cpp
@@ -27,9 +30,9 @@ cf2: crazyflie.ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
 		--libraries $(HOME)/Documents/Arduino/libraries \
 		--libraries ../.. \
 		--build-path ./build \
-		--fqbn $(FQBN) crazyflie.ino
+		--fqbn $(FQBN) $(SKETCH).ino
 
-$(SRC)/msp/__messages__.h: ../msppg/messages.json
+$(MSGS): ../msppg/messages.json
 	cd ../msppg; make install; cd ../crazyflie
 
 standard_config:
@@ -39,7 +42,7 @@ flash: $(BIN)
 	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D build/crazyflie.ino.bin
 
 clean:
-	rm -rf build __*__.cpp
+	rm -rf build __*__.cpp $(MSGS)
 
 listen:
 	miniterm.py $(PORT) 115200 --exit-char 3
