renamed:    attic/kicad/weact/top/top.kicad_pcb -> kicad/weact/top/top.kicad_pcb

--- a/tests/makefile.include
+++ b/tests/makefile.include
@@ -1,7 +1,7 @@
 PORT = /dev/ttyACM0
 
-# FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
-FQBN = STMicroelectronics:stm32:GenF4:pnum=FEATHER_F405,usb=CDCgen
+FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
+# FQBN = STMicroelectronics:stm32:GenF4:pnum=FEATHER_F405,usb=CDCgen
 
 BIN = build/$(SKETCH).ino.bin
 
