--- a/crazyflie/Makefile
+++ b/crazyflie/Makefile
@@ -10,6 +10,10 @@ SRC = ../src
 
 MSGS = $(SRC)/msp/__messages__.h
 
+HASKDIR = ../haskell
+
+include ../snn_path.makefile
+
 any:
 	echo "Please specify cf2 or bolt"
 
@@ -35,14 +39,25 @@ cf2: $(SKETCH).ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
 $(MSGS): ../msppg/messages.json
 	cd ../msppg; make install; cd ../crazyflie
 
+haskell_config: copilot_core.cpp
+	cp $(SRC)/control/haskell.hpp $(SRC)/__control__.hpp
+
+copilot_core.cpp : $(HASKDIR)/*.hs $(HASKDIR)/pids/*.hs
+	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids $(HASKDIR)/Pids.hs -i$(PWD)
+	mv copilot_core.c copilot_core.cpp
+
 standard_config:
 	cp $(SRC)/control/standard.hpp $(SRC)/__control__.hpp
+
+snn_config:
+	cp $(SRC)/control/snn.hpp $(SRC)/__control__.hpp
+	cp $(EMBDIR)/examples/difference/*.hpp .
 
 flash: $(BIN)
 	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D build/crazyflie.ino.bin
 
 clean:
-	rm -rf build __*__.cpp $(MSGS)
+	rm -rf build *.hpp __*__.cpp ../src/__control__.hpp $(MSGS)
 
 listen:
 	miniterm.py $(PORT) 115200 --exit-char 3
