--- a/crazyflie/Makefile
+++ b/crazyflie/Makefile
@@ -57,7 +57,7 @@ flash: $(BIN)
 	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D build/crazyflie.ino.bin
 
 clean:
-	rm -rf build *.hpp __*__.cpp ../src/__control__.hpp $(MSGS)
+	rm -rf build *.hpp copilot* __*__.cpp ../src/__control__.hpp $(MSGS)
 
 listen:
 	miniterm.py $(PORT) 115200 --exit-char 3
