--- a/crazyflie/Makefile
+++ b/crazyflie/Makefile
@@ -17,7 +17,7 @@ include ../snn_path.makefile
 any:
 	echo "Please specify cf2 or bolt"
 
-bolt: $(SKETCH).ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp $(MSGS)
+bolt: $(SKETCH).ino  *.cpp *.h bolt/*.cpp $(SRC)/*.hpp $(SRC)/tasks/*.hpp $(MSGS)
 	cp bolt/imu.cpp ./__imu__.cpp
 	cp bolt/motors.cpp ./__motors__.cpp
 	arduino-cli compile \
@@ -26,7 +26,7 @@ bolt: $(SKETCH).ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp $(MSGS)
 		--build-path ./build \
 		--fqbn $(FQBN) $(SKETCH).ino
 
-cf2: $(SKETCH).ino  *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
+cf2: $(SKETCH).ino  *.cpp *.h cf2/*.cpp $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
 	__messages__.h
 	cp cf2/imu.cpp ./__imu__.cpp
 	cp cf2/motors.cpp ./__motors__.cpp
