renamed:    crazyflie/bolt/imu.cpp -> crazyflie/imu.cpp

--- a/crazyflie/Makefile
+++ b/crazyflie/Makefile
@@ -18,9 +18,9 @@ any:
 	echo "Please specify cf2 or bolt"
 
 bolt: $(SKETCH).ino  *.cpp *.h bolt/*.cpp $(SRC)/*.hpp $(SRC)/tasks/*.hpp $(MSGS)
-	cp bolt/imu.cpp ./__imu__.cpp
 	cp bolt/motors.cpp ./__motors__.cpp
 	arduino-cli compile \
+		--build-property build.extra_flags=-DBOLT \
 		--libraries $(HOME)/Documents/Arduino/libraries \
 		--libraries ../.. \
 		--build-path ./build \
@@ -28,7 +28,6 @@ bolt: $(SKETCH).ino  *.cpp *.h bolt/*.cpp $(SRC)/*.hpp $(SRC)/tasks/*.hpp $(MSGS
 
 cf2: $(SKETCH).ino  *.cpp *.h cf2/*.cpp $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
 	__messages__.h
-	cp cf2/imu.cpp ./__imu__.cpp
 	cp cf2/motors.cpp ./__motors__.cpp
 	arduino-cli compile \
 		--libraries $(HOME)/Documents/Arduino/libraries \
