--- a/crazyflie/Makefile
+++ b/crazyflie/Makefile
@@ -8,7 +8,7 @@ BIN = build/$(SKETCH).ino.bin
 
 SRC = ../src
 
-MSGS = __messages__.h
+MSGS = ../src/__messages__.h
 
 HASKDIR = ../haskell
 
@@ -34,27 +34,27 @@ cf2: $(SKETCH).ino  *.cpp *.h cf2/*.cpp $(SRC)/*.hpp $(MSGS)
 		--build-path ./build \
 		--fqbn $(FQBN) $(SKETCH).ino
 
-__messages__.h: ../msppg/messages.json
+$(MSGS): ../msppg/messages.json
 	cd ../msppg; make install; cd ../crazyflie
-	cp ../msppg/messages.h ./__messages__.h
+	cp ../msppg/messages.h $(MSGS)
 
 haskell_config: copilot_core.cpp
-	cp $(SRC)/control/haskell.hpp ./__control__.hpp
+	cp $(SRC)/control/haskell.hpp ../src/__control__.hpp
 
 lowres_config:
-	cp $(SRC)/control/lowres.hpp ./__control__.hpp
+	cp $(SRC)/control/lowres.hpp ../src/__control__.hpp
 
 nopos_config:
-	cp $(SRC)/control/nopos.hpp ./__control__.hpp
+	cp $(SRC)/control/nopos.hpp ../src/__control__.hpp
 
 split_config:
-	cp $(SRC)/control/split.hpp ./__control__.hpp
+	cp $(SRC)/control/split.hpp ../src/__control__.hpp
 
 standard_config:
-	cp $(SRC)/control/standard.hpp ./__control__.hpp
+	cp $(SRC)/control/standard.hpp ../src/__control__.hpp
 
 snn_config:
-	cp $(SRC)/control/snn.hpp ./__control__.hpp
+	cp $(SRC)/control/snn.hpp ../src/__control__.hpp
 	cp $(EMBDIR)/examples/difference/*.hpp .
 
 copilot_core.cpp : $(HASKDIR)/*.hs $(HASKDIR)/pids/*.hs
@@ -65,9 +65,7 @@ dfu: $(BIN)
 	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D $(BIN)
 
 clean:
-	rm -rf build copilot* __*__.* $(MSGS)
+	rm -rf build copilot* ../src/__*__.*
 
 listen:
 	miniterm.py $(PORT) 115200 --exit-char 3
-
-
