--- a/attic/webots/controllers/controller/Makefile
+++ b/attic/webots/controllers/controller/Makefile
@@ -12,6 +12,15 @@
 #  You should have received a copy of the GNU General Public License
 #  along with this program. If not, see <http:--www.gnu.org/licenses/>.
 
+# TeNNLab framework stuff ----------------------------------------------------
+
+include ../../../snn_path.makefile
+
+NET = $(EMBDIR)/examples/difference/difference.txt
+
+VIZ_DIR = $(HOME)/Desktop/framework/viz
+VIZ_PORT = 8100
+
 # Support different worlds and closed-loop controllers ------------------------
 
 world = empty
@@ -38,6 +47,19 @@ run:
 		../../plugins/physics/__custom__/lib__custom__.so
 	webots ../../worlds/$(world).wbt &
 	/usr/local/webots/webots-controller --stdout-redirect controller
+
+runsnn:
+	cp ../../plugins/physics/snn/libsnn.so \
+		../../plugins/physics/__custom__/lib__custom__.so
+	webots ../../worlds/$(world).wbt &
+	/usr/local/webots/webots-controller --stdout-redirect controller &
+	sleep 1
+	cd $(VIZ_DIR); \
+ 	love . -i '{"source":"request","port":$(VIZ_PORT),"host":"localhost"}' \
+     	-n $(NET) --set_num_screen_shot 0 --use_name_neuron \
+		'{"0":"I1","1":"I2","2":"S","3":"D1","4":"D2","5":"O","6":"S2"}' \
+		--set_font_size 16 \
+		> /dev/null
 
 ### Do not modify: this includes Webots global Makefile.include
 null :=
