--- a/webots/plugins/physics/standard/Makefile
+++ b/webots/plugins/physics/standard/Makefile
@@ -1,3 +1,5 @@
+# Custom physics plugin for Hackflight simulator 
+#
 #  Copyright (C) 2025 Simon D. Levy
 #
 #  This program is free software: you can redistribute it and/or modify
@@ -12,4 +14,14 @@
 # You should have received a copy of the GNU General Public License
 # along with this program. If not, see <http:--www.gnu.org/licenses/>.
 
-include ../makefile.include
+CFLAGS = -O3 -std=c++11 -Wall -Wextra
+
+INCLUDE = -I../../../../src -I../../..
+
+CXX_SOURCES = ../support.cpp ../../../../src/control/standard.cpp
+
+### Do not modify: this includes Webots global Makefile.include
+null :=
+space := $(null) $(null)
+WEBOTS_HOME_PATH?=$(subst $(space),\ ,$(strip $(subst \,/,$(WEBOTS_HOME))))
+include $(WEBOTS_HOME_PATH)/resources/Makefile.include
