--- a/webots/plugins/physics/physics/Makefile.haskell
+++ b/webots/plugins/physics/physics/Makefile.haskell
@@ -23,11 +23,11 @@ INCLUDE = -I$(SRC) -I../../..
 
 HASKDIR = ../../../../haskell
 
-CXX_SOURCES = ../support.cpp copilot_core.cpp $(SRC)/control/haskell/copilot_streams.cpp
+CXX_SOURCES = support.cpp $(SRC)/control/haskell.cpp copilot_core.cpp $(SRC)/control/haskell/copilot_streams.cpp
 
 FILES_TO_REMOVE += copilot*
 
-all: libhaskell.so
+all: libphysics.so
 
 copilot_core.cpp : $(HASKDIR)/*.hs $(HASKDIR)/pids/*.hs
 	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids $(HASKDIR)/Pids.hs -i$(PWD)
