--- a/webots/plugins/physics/physics/Makefile.lowres
+++ b/webots/plugins/physics/physics/Makefile.lowres
@@ -18,7 +18,7 @@ CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 INCLUDE = -I../../../../src -I../../..
 
-CXX_SOURCES = ../support.cpp ../../../../src/control/standard.cpp
+CXX_SOURCES = support.cpp ../../../../src/control/lowres.cpp
 
 ### Do not modify: this includes Webots global Makefile.include
 null :=
