renamed:    webots/plugins/physics/physics/support.cpp -> webots/plugins/physics/custom/custom.cpp

--- a/webots/plugins/physics/custom/Makefile
+++ b/webots/plugins/physics/custom/Makefile
@@ -18,7 +18,7 @@ CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 INCLUDE = -I../../../../src -I../../..
 
-CXX_SOURCES = support.cpp ../../../../src/control/standard.cpp
+CXX_SOURCES = custom.cpp ../../../../src/control/standard.cpp
 
 FILES_TO_REMOVE += copilot*
 
