--- a/webots/plugins/physics/custom/Makefile.lowres
+++ b/webots/plugins/physics/custom/Makefile.lowres
@@ -18,7 +18,9 @@ CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 INCLUDE = -I../../../../src -I../../..
 
-CXX_SOURCES = custom.cpp ../../../../src/control/lowres.cpp
+CXX_SOURCES = custom.cpp ../../../../src/pid/lowres.cpp
+
+FILES_TO_REMOVE += copilot*
 
 ### Do not modify: this includes Webots global Makefile.include
 null :=
