modified:   controller.cpp

--- a/webots/controllers/controller/Makefile
+++ b/webots/controllers/controller/Makefile
@@ -22,12 +22,12 @@ setpoint = human
 
 OPENCV_DIR = /usr/include/opencv4
 
-CFLAGS = -O3 -std=c++11 -Wall -Wextra $(pkg-config --cflags --libs opencv4)
+CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 SRCDIR = ../../../src
 INCLUDE = -I../../../src -I../.. -I$(OPENCV_DIR)
 
-LIBRARIES = -L/usr/lib/x86_64-linux-gnu/ -lopencv_highgui -lopencv_core -lopencv_videoio
+LIBRARIES = -L/usr/lib/x86_64-linux-gnu/ -lopencv_highgui -lopencv_core -lopencv_videoio -lopencv_imgproc
 
 CXX_SOURCES = controller.cpp
 
