new file:   robot_parser.hpp

--- a/webots/controllers/controller/Makefile
+++ b/webots/controllers/controller/Makefile
@@ -40,7 +40,7 @@ VERBOSE = 1
 
 run:
 	webots ../../worlds/$(world).wbt &
-	/usr/local/webots/webots-controller --stdout-redirect controller $(world) $(setpoint)
+	/usr/local/webots/webots-controller --stdout-redirect controller $(world) $(setpoint) ../../protos
 
 
 edit:
