deleted:    sensors/rangefinder.hpp

--- a/webots/controllers/controller/parsers/Makefile
+++ b/webots/controllers/controller/parsers/Makefile
@@ -29,7 +29,7 @@ run: main
 main: main.o
 	g++ -o main main.o $(OPENCV_LIB)
 
-main.o: main.cpp  *.h* obstacles/* sensors/*
+main.o: main.cpp  *.h* obstacles/*
 	g++ -c -I$(SRC) -I$(OPENCV_INC) $(CFLAGS) main.cpp
 
 clean:
